force-app/main/default/objects/BBVA_Pitch_Team__c/BBVA_Pitch_Team__c.object-meta.xml
<CustomObject>
    <label>BBVA Pitch Team</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>BBVA Pitch Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BBVA Pitch Team</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>