force-app/main/default/objects/BBVA_Pitch_Team__c/fields/email_desc__c.field-meta.xml
<CustomField>
    <fullName>email_desc__c</fullName>
    <formula>external_user_id__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>