force-app/main/default/objects/BBVA_Pitch_Team__c/fields/external_reference_id__c.field-meta.xml
<CustomField>
    <fullName>external_reference_id__c</fullName>
    <label>Pitch</label>
    <referenceTo>Pitch__c</referenceTo>
    <relationshipLabel>BBVA Pitch Team</relationshipLabel>
    <relationshipName>BBVA_Pitch_Team</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>