force-app/main/default/objects/BBVA_Pitch_Team__c/fields/external_user_id__c.field-meta.xml
<CustomField>
    <fullName>external_user_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BBVA_Pitch_Team</relationshipName>
    <type>Lookup</type>
</CustomField>