force-app/main/default/objects/BBVA_Pitch_Team__c/fields/role_desc__c.field-meta.xml
<CustomField>
    <fullName>role_desc__c</fullName>
    <label>Team Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Manager FI</fullName>
            </value>
            <value>
                <fullName>Account Manager FX</fullName>
            </value>
            <value>
                <fullName>Account Manager EQ</fullName>
            </value>
            <value>
                <fullName>Sales FI</fullName>
            </value>
            <value>
                <fullName>Sales FX</fullName>
            </value>
            <value>
                <fullName>Sales EQ</fullName>
            </value>
            <value>
                <fullName>Analyst FI</fullName>
            </value>
            <value>
                <fullName>Analyst FX</fullName>
            </value>
            <value>
                <fullName>Analyst EQ</fullName>
            </value>
            <value>
                <fullName>Sales HY</fullName>
            </value>
            <value>
                <fullName>Sales Govies</fullName>
            </value>
            <value>
                <fullName>Sales Credit</fullName>
            </value>
            <value>
                <fullName>Sales Emergents</fullName>
            </value>
            <value>
                <fullName>Global Banker Team</fullName>
            </value>
            <value>
                <fullName>CIB Banker</fullName>
            </value>
            <value>
                <fullName>Industry Head</fullName>
            </value>
            <value>
                <fullName>Local Banker</fullName>
            </value>
            <value>
                <fullName>Regional Banker</fullName>
            </value>
            <value>
                <fullName>Product Specialist</fullName>
            </value>
            <value>
                <fullName>Risk Analyst</fullName>
            </value>
            <value>
                <fullName>Global Banker</fullName>
            </value>
            <value>
                <fullName>GCC pool</fullName>
            </value>
            <value>
                <fullName>Transactional Banker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>